# code-relic

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  repo.rs  scanner.rs
src/checks/: mod.rs  traits.rs
src/checks/common/: ci.rs  large_files.rs  mod.rs  readme.rs
src/commands/: scan.rs
src/languages/: analyzer.rs  mod.rs
src/languages/rust/: analyzer.rs  mod.rs
src/languages/rust/checks/: cargo_check.rs  cargo_clippy.rs  cargo_fmt.rs  cargo_metadata.rs  cargo_test_no_run.rs  mod.rs
src/model/: category.rs  evidence.rs  finding.rs  language.rs  mod.rs  report.rs  score.rs  severity.rs
src/report/: json.rs  markdown.rs  mod.rs  text.rs
src/runner/: command.rs  mod.rs
src/scoring/: mod.rs  scorer.rs
