[package]
name = "code_relic"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "coderelic"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
toml = "1.1.2+spec-1.1.0"
